--- a/assignment_2/assignment_2_boris_gans.ipynb
+++ b/assignment_2/assignment_2_boris_gans.ipynb
@@ -827,8 +827,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EDA Conclusion\n",
-    "\n",
+    "### EDA Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Before we can start with model training, lets remove some useless columns.\n",
     ">- instant: This is just an index and serves no use.\n",
     ">- dteday: As described earlier, this is the only non-numerical feature. Since the creators have already split this feature into season, year, month and hour, and enhanced it with holiday, weekday and workingday, we no longer need this column.\n",
@@ -1080,6 +1085,18 @@
     "print(f\"Test set: {X_test.shape[0]} samples ({X_test.shape[0]/n:.1%})\\n\")\n",
     "print(X_train.info())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3: Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
